--- a/siteXYZ/antd-demo-ts/src/styles/footer.css
+++ b/siteXYZ/antd-demo-ts/src/styles/footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: #1890ff;
     min-height: 8vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
