--- a/siteXYZ/antd-demo-ts/src/styles/header.css
+++ b/siteXYZ/antd-demo-ts/src/styles/header.css
@@ -2,6 +2,7 @@
 .header {
     background-color: #1890ff;
     min-height: 8vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
