--- a/siteXYZ/antd-demo-ts/src/styles/uploadImage.css
+++ b/siteXYZ/antd-demo-ts/src/styles/uploadImage.css
@@ -1,5 +1,8 @@
 .uploadImage {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    font-size: calc(10px + 2vmin);
+    vertical-align: middle;
 }
