--- a/siteXYZ/antd-demo-ts/src/styles/content.css
+++ b/siteXYZ/antd-demo-ts/src/styles/content.css
@@ -1,7 +1,11 @@
 .content {
-    min-height: 54vh;
+    height: 100%;
     width:100%;
     background-color: #001529;
     font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+h1, h2, h3, h4, h5, h6, p {
     color: white;
 }
