--- a/siteXYZ/antd-demo-ts/src/styles/content.css
+++ b/siteXYZ/antd-demo-ts/src/styles/content.css
@@ -1,5 +1,5 @@
 .content {
-    min-height: 54vh;
+    height: 100%;
     width:100%;
     background-color: #001529;
     font-size: calc(10px + 2vmin);
