--- a/siteXYZ/antd-demo-ts/src/App.css
+++ b/siteXYZ/antd-demo-ts/src/App.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  height: 100%;
+  height: fit-content;
   color: white;
 }
 
