--- a/siteXYZ/antd-demo-ts/src/index.css
+++ b/siteXYZ/antd-demo-ts/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #001529;
+  height: fit-content;
 }
 
 code {
