--- a/siteXYZ/antd-demo-ts/src/styles/content.css
+++ b/siteXYZ/antd-demo-ts/src/styles/content.css
@@ -4,6 +4,8 @@
     background-color: #001529;
     font-size: calc(10px + 2vmin);
     color: white;
+    text-align: center;
+    padding: 5% 5%;
 }
 
 h1, h2, h3, h4, h5, h6, p {
